--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.4",
-    "mongoose": "^7.5.1",
+    "mongoose": "6.11.1",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
+    "mongodb": "^6.0.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.2.2",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "bcryptjs": "^2.4.3"
   }
 }
