--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "flowbite-react": "^0.6.0",
     "framer-motion": "^10.16.4",
     "mongodb": "^6.0.0",
     "mongoose": "6.11.1",
