--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "10.4.15",
     "bcryptjs": "^2.4.3",
     "eslint": "8.49.0",
@@ -23,6 +24,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.2",
+    "react-select": "^5.7.4",
+    "react-to-print": "^2.14.13",
+    "redux": "^4.2.1",
     "swr": "^2.2.2",
     "tailwindcss": "3.3.3"
   }
