--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-next": "13.4.19",
     "flowbite-react": "^0.6.0",
     "framer-motion": "^10.16.4",
+    "loaders.css": "^0.1.2",
     "mongodb": "^6.0.0",
     "mongoose": "6.11.1",
     "next": "13.4.19",
@@ -24,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.2",
     "react-select": "^5.7.4",
     "react-to-print": "^2.14.13",
