--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.1.13",
+    "@react-stately/data": "^3.10.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "apexcharts": "^3.42.0",
     "autoprefixer": "10.4.15",
     "bcryptjs": "^2.4.3",
     "eslint": "8.49.0",
@@ -21,8 +24,10 @@
     "mongoose": "6.11.1",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
