--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "loaders.css": "^0.1.2",
     "mongodb": "^6.0.0",
     "mongoose": "6.11.1",
-    "next": "13.4.19",
+    "next": "^13.5.4",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
