--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-to-print": "^2.14.13",
     "redux": "^4.2.1",
     "swr": "^2.2.2",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
   }
 }
