--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "^13.5.4",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.7",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
