--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@nextui-org/react": "^2.1.13",
     "@react-stately/data": "^3.10.2",
     "@reduxjs/toolkit": "^1.9.5",
-    "apexcharts": "^3.42.0",
+    "apexcharts": "^3.44.2",
     "autoprefixer": "10.4.15",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "flowbite-react": "^0.6.0",
@@ -29,6 +30,7 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
