updated testimonial and transcript

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -40,6 +40,7 @@
     "react-redux": "^8.1.2",
     "react-select": "^5.7.4",
     "react-to-print": "^2.14.13",
+    "react-toastify": "^11.0.5",
     "redux": "^4.2.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.1",
