download transcript whiles maintining the aspect ration

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "eslint-config-next": "13.4.19",
     "flowbite-react": "^0.6.0",
     "framer-motion": "^10.16.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "loaders.css": "^0.1.2",
     "lucide-react": "^0.352.0",
     "mongodb": "^6.0.0",
