--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
+    "@radix-ui/react-icons": "^1.3.2",
     "@react-stately/data": "^3.10.2",
     "@reduxjs/toolkit": "^1.9.5",
     "apexcharts": "^3.44.2",
     "autoprefixer": "10.4.15",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.1",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "flowbite-react": "^0.6.0",
@@ -45,9 +46,10 @@
     "react-toastify": "^11.0.5",
     "redux": "^4.2.1",
     "swr": "^2.2.5",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.2.4",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
   }
 }
